# EEnginev3

./: .gitignore  BUILD  README.md  WORKSPACE  clientTrustStore.key  clientkeystore  go.mod  go.sum  proKeystore  repositories.bzl  server.crt  update_go_deps.sh
EEnginev3/: build.xml
EEnginev3/nbproject/: build-impl.xml  genfiles.properties  project.properties  project.xml
api/proto/: BUILD  messages.proto  mmserver.proto
client/: .gitignore
client/lib/: nblibraries.properties
client/nbproject/: build-impl.xml  genfiles.properties  project.properties  project.xml
client/src/: Main.java
client/src/behaviors/: AmmoBehavior.java  AmmoPowerUpBehavior.java  Animator.java  CannonBehavior.java  RocketAmmo.java  ShotgunAmmo.java  SpecifiedAnimator.java  SpecifiedTransform.java  TankMovement.java  Transform.java
client/src/game/: DeathMatch.java  Map.java  Square.java
client/src/graphics/: Animation.java  Camera.java  Frame.java  Renderer.java  Shader.java  ShaderUtils.java  Sprite.java  Textrenderer.java  Texture.java  TrueTypeFont.java  VertexArray.java  Window.java
client/src/main/: Client.java  ClientGame.java  Input.java  Main.java  Sound.java
engine/: client.bat
engine/src/main/resources/animations/: powerupempty.anim  poweruplaser.anim  powerupshotgun.anim  (+3 more)
go/: mmserver.txt
go/cmd/gameclient/: BUILD.bazel  main.go
go/cmd/gameserver/: BUILD.bazel  main.go
go/cmd/mmgateway/: BUILD  main.go
go/cmd/mmserver/: BUILD.bazel  main.go
go/pkg/mmserver/: BUILD.bazel  database.go  run_integration_tests.sh  server.go
go/pkg/mmserver/migrations/: 0_initial.down.sql  0_initial.up.sql  Initial.down  Initial.up
go/pkg/mmserver/persistence/: BUILD.bazel  database.go
go/pkg/mmserver/tests/: BUILD.bazel  server_test.go
nginx/: nginx.conf
res/animations/: ammo.anim  powerupshotgun.anim  tank.anim  tankHit.anim
server/nbproject/: build-impl.xml  genfiles.properties  project.properties  project.xml
server/src/behaviors/: AmmoBehavior.java  AmmoPowerUpBehavior.java  Animator.java  CannonBehavior.java  RocketAmmo.java  ShotgunAmmo.java  SpecifiedTransform.java  TankMovement.java  Transform.java
server/src/game/: DeathMatch.java  DeathMatchClientHandler.java  Map.java
server/src/main/: ClientHandler.java  ClientServer.java  Input.java  Main.java  Physics.java  Server.java  ServerGame.java  Util.java
shared/nbproject/: build-impl.xml  genfiles.properties  project.properties  project.xml
shared/src/behaviors/: CannonBehaviorRoot.java  Transform.java  TransformRoot.java
shared/src/main/: Behavior.java  Delay.java  Game.java  GameMode.java  Gameobject.java  Time.java  Utilities.java
shared/src/math/: Matrix4f.java  Vector2f.java  Vector2i.java  Vector3f.java  Vector4f.java
shared/src/test/: TestGameobject.java
www/: =16.14.0  package-lock.json  package.json
www/src/: index.css  index.js  leaderboard.js  register.js
(+71 files in other folders)
