load("@io_bazel_rules_go//go:def.bzl", "go_library")

go_library(
    name = "go_default_library",
    srcs = ["server.go"],
    importpath = "github.com/exoson/EEnginev3/go/pkg/mmserver",
    visibility = ["//visibility:public"],
    deps = [
        "//api/proto:go_default_library",
        "//go/pkg/mmserver/persistence:go_default_library",
    ],
)
