load("@io_bazel_rules_go//go:def.bzl", "go_library")

go_library(
    name = "go_default_library",
    srcs = ["database.go"],
    importpath = "github.com/exoson/EEnginev3/go/pkg/mmserver/persistence",
    visibility = ["//visibility:public"],
    deps = [
        "//api/proto:go_default_library",
        "@com_github_google_uuid//:go_default_library",
        "@com_github_lib_pq//:go_default_library",
    ],
)
