load("@io_bazel_rules_go//go:def.bzl", "go_test")

go_test(
    name = "go_default_test",
    srcs = ["server_test.go"],
    deps = [
        "//api/proto:go_default_library",
        "//go/pkg/mmserver:go_default_library",
        "@com_github_stretchr_testify//assert:go_default_library",
    ],
)
